src/main/java/com/example/demo/common/error/CustomErrorCode.java
package com.example.demo.common.error;

public enum CustomErrorCode {
    DUPLICATED_MEMBER_SERVICE_ID,
    DUPLICATED_MEMBER_NICKNAME,
    SERVER_INTERNAL_ERROR, INVALID_CLIENT_REQUEST_BODY
}